<resources>
    <string name="app_name">Fun 2 Learn</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="date_amp_time"><![CDATA[Date & Time]]></string>
    <string name="marks">Marks</string>
    <string name="_0_10">0/10</string>
    <string name="submit">Submit Quiz</string>
    <string name="result">RESULT</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="logo">Logo</string>
    <string name="username">Username</string>
    <string name="user_icon">user icon</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="show_password">show_password</string>
    <string name="hide_password">hide_password</string>
    <string name="account_created_successfully">Account created successfully</string>
    <string name="username_exist">Username already exist</string>
    <string name="account_created_failed">ERROR!!! While signup, Please try again</string>
    <string name="login_success">Login successfully</string>
    <string name="login_failed">Invalid credentials</string>
    <string name="welcome_text">Welcome to Fun2Learn</string>
    <string name="take_quiz">Take Quiz</string>
    <string name="logout">Logout</string>
    <string name="history">HISTORY</string>
    <string name="sr">Sr#</string>
    <string name="date">Date</string>
    <string name="github_repository_commits">Github Repository Commits</string>

</resources>