<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:id="@+id/history_view"
    android:padding="10sp"
    android:orientation="vertical"
    tools:context=".History">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginVertical="10sp"
        android:padding="10sp"
        android:textAlignment="center"
        android:background="@color/secondary"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:layout_marginVertical="10sp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/sr"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_weight="3"
            android:text="@string/date"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/marks"/>
    </LinearLayout>
    <ListView
        android:id="@+id/history_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />


</LinearLayout>