<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondary"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/quiz_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/yellow"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/sr"/>
        <TextView
            android:id="@+id/quiz_date"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_weight="3"
            android:text="@string/date"/>

        <TextView
            android:id="@+id/quiz_marks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/marks"/>

    </LinearLayout>
</LinearLayout>

