<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary"
    android:orientation="vertical"
    android:weightSum="11"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:layout_marginTop="15sp"
            android:src="@drawable/logo_text"
            android:contentDescription="@string/logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15sp"
        android:layout_weight="10"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:layout_marginBottom="-40sp"
            android:elevation="10sp"
            android:src="@drawable/user_profile2"
            android:contentDescription="@string/user_icon" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center|bottom"
            android:layout_marginHorizontal="10sp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#FFFAFA"
            android:elevation="0dp"
            app:cardCornerRadius="30dp">

            <TextView
                android:id="@+id/username_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="10sp"
                android:layout_marginTop="40sp"
                android:layout_marginBottom="10sp"
                android:text="@string/username"
                android:textColor="@color/primary"
                android:textSize="22sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/loader"
                android:contentDescription="@string/name"
                />

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</LinearLayout>