<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".ResultActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/resultMainLayout"
        android:background="@color/bg_gray"
        android:padding="10sp"
        android:orientation="vertical">
        <TableLayout
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <!--        row-1-->
            <TableRow
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textColor="@color/white"
                    android:padding="10sp"
                    android:background="@color/primary"
                    android:layout_column="1"
                    android:layout_weight="1"
                    />

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_weight="1"
                    android:background="@color/secondary"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:padding="10sp"
                    android:scrollHorizontally="true"
                    android:textColor="@color/white" />

            </TableRow>

            <!--        row-2-->
            <TableRow
                android:layout_width="0dp"
                android:layout_marginTop="1sp"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/date_amp_time"
                    android:textColor="@color/white"
                    android:padding="10sp"
                    android:background="@color/primary"
                    android:layout_column="1"
                    android:layout_weight="1"
                    />

                <TextView
                    android:id="@+id/dateTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_weight="1"
                    android:background="@color/secondary"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:padding="10sp"
                    android:scrollHorizontally="true"
                    android:textColor="@color/white" />

            </TableRow>
            <!--        row-3-->
            <TableRow
                android:layout_width="0dp"
                android:layout_marginTop="1sp"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/marks"
                    android:textColor="@color/white"
                    android:padding="10sp"
                    android:background="@color/primary"
                    android:layout_column="1"
                    android:layout_weight="1"
                    />

                <TextView
                    android:id="@+id/marks"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_weight="1"
                    android:background="@color/secondary"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:padding="10sp"
                    android:text="@string/_0_10"
                    android:scrollHorizontally="true"
                    android:textColor="@color/white" />

            </TableRow>
        </TableLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="-30sp"
            android:padding="10sp"
            android:textAlignment="center"
            android:background="@color/secondary"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView
            android:id="@+id/t"
            android:layout_width="match_parent"
            android:padding="10sp"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/secondary"
            android:textColor="@color/white"
            android:buttonTint="@color/primary"
            android:id="@+id/r"
            android:visibility="gone"
            />

    </LinearLayout>

</ScrollView>