<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:padding="10sp"
    tools:context=".QuizActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp">

            <!--        row-1-->
            <TableRow
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_weight="1"
                    android:background="@color/primary"
                    android:padding="10sp"
                    android:text="@string/username"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_weight="1"
                    android:background="@color/secondary"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:padding="10sp"
                    android:scrollHorizontally="true"
                    android:textColor="@color/white" />

            </TableRow>

            <!--        row-2-->
            <TableRow
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="1sp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_weight="1"
                    android:background="@color/primary"
                    android:padding="10sp"
                    android:text="@string/date_amp_time"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/dateTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_weight="1"
                    android:background="@color/secondary"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:padding="10sp"
                    android:scrollHorizontally="true"
                    android:textColor="@color/white" />

            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/quesInp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:layout_marginBottom="20sp"
            android:background="@color/primary"
            android:padding="10sp"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white" />

        <RadioGroup
            android:id="@+id/optionsGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RadioButton
                android:id="@+id/option1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/secondary"
                android:buttonTint="@color/primary"
                android:text=""
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/option2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:background="@color/secondary"
                android:buttonTint="@color/primary"
                android:text=""
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/option3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:background="@color/secondary"
                android:buttonTint="@color/primary"
                android:text=""
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/option4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:background="@color/secondary"
                android:buttonTint="@color/primary"
                android:text=""
                android:textColor="@color/white" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"

            >

            <Button
                android:id="@+id/prevQuesBtn"
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="10sp"
                android:text="@string/previous"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/nextQuesBtn"
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:text="@string/next"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5sp"
            android:backgroundTint="@color/secondary"
            android:padding="10sp"
            android:text="@string/submit" />
    </LinearLayout>


</ScrollView>